# var_engine

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
var_engine/: __init__.py  aggregation.py  cli.py  default_config.py  market_data.py  model.py  read.py  utils.py  var_study.py
var_engine/data/: __init__.py
var_engine/data/template/: example.xlsx
var_engine/notebooks/: example.ipynb
